# king-domino

./: .env.example  .gitignore  LICENSE  README.md  bot-init.js  bot.js  index.html  multiplayer-harness.html  package-lock.json  package.json  pyproject.toml  script.js  server.js  setup.py  style.css
ai/: __init__.py
ai/artifacts/: heuristic_policy.json  latest.pt
ai/puffer_kingdomino/: README.md  __init__.py  agents.py  benchmark.py  candidate_eval.py  candidate_policy.py  candidate_ppo.py  candidate_train.py  core.py  distill_bakeoff.py  distill_train.py  encoding_contract_test.py  eval.py  export_policy.py  factor_eval.py  factor_train.py  fair_eval.py  heuristic_eval.py  heuristic_policy.py  heuristic_train.py  imitation_eval.py  js_parity_probe.mjs  native.pyx  parity_test.py  policy.py  policy_diagnostic.py  train.py  (+6 more)
classes/: ai-policy-runner.js  board-min-max-axis.js  domino-coordinates.js  domino-draft-manager.js  domino-edges.js  domino-pool-manager.js  domino-tile.js  domino.js  drafted-tile.js  draw-board.js  draw-draft.js  edges.js  eventemitter.js  game-advisor.js  game-board-manager.js  game-configuration.js  game.js  multiplayer-client.js  player.js  web-game-manager.js
components/: game-layout.js
test/: test-ai-policy-runner.js  test-board-min-max-axis.js  test-board-scoring.js  test-domino-tile.js  test-domino.js  test-example.js  test-framework.js  test-game-advisor.js  test-game-board-manager.js  test-game-configuration.js  test-rotation.js  test-runner.js  test-web-game-manager.js
tools/: ai-fair-eval.mjs  perf-harness.mjs  ws-smoke.mjs
(+6 files in other folders)
