[build-system]
requires = ["setuptools>=68", "wheel", "Cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kingdomino-ai"
version = "0.1.0"
description = "Native RL environment experiments for the Kingdomino browser game"
requires-python = ">=3.9"
dependencies = [
  "Cython>=3.0",
  "numpy>=1.24",
  "pufferlib>=3.0.0",
]

[project.optional-dependencies]
train = [
  "torch>=2.2",
]

[tool.setuptools.packages.find]
include = ["ai*"]

[tool.setuptools.package-data]
"ai.puffer_kingdomino" = ["*.pyx"]

